# Physical-PI

./: CMakeLists.txt  Makefile  README.md
for_test/: .new_mouse_drive.ko.cmd  .new_mouse_drive.mod.cmd  .new_mouse_drive.mod.o.cmd  .new_mouse_drive.o.cmd  Makefile  modules.order  new_mouse_drive.c  new_mouse_drive.ko  new_mouse_drive.mod  new_mouse_drive.mod.c  print_event  print_event.c  print_mouse  print_mouse.cpp  test_gadget  test_gadget.c
include/: gadget_mouse.h  pid.h  v4l2_camera.h  v5lite.h
include/ncnn/: platform.h
include/opencv/opencv2/: cvconfig.h
src/: gadget_mouse.cpp  main.cpp  pid.cpp  test_opencv_crosshair.cpp  v4l2_camera.cpp  v5lite-s.cpp  v5lite.cpp
